Add results for preliminary round

--- a/preliminary.html
+++ b/preliminary.html
@@ -32,6 +32,66 @@
 
    <section id="importantdates">
       <h2>Preliminary Round</h2>
+      
+      <h3>Result</h3>
+      The following 16 teams advance to the final round.
+      The game results are on <a href="http://arena.ai-comp.net/contests/11">the online execution server</a>.
+      <table border='1' cellspacing='0' cellpadding='3' align='center' width='80%'>
+        <tr>
+          <th>Place
+          <th>Team Name
+        <tr>
+          <td>1
+          <td>Taiyo
+        <tr>
+          <td>2
+          <td>iwashi31
+        <tr>
+          <td>3
+          <td>haraduka
+        <tr>
+          <td>4
+          <td>assy
+        <tr>
+          <td>5
+          <td>wahu
+        <tr>
+          <td>6
+          <td>tosaka2
+        <tr>
+          <td>7
+          <td>宇宙ツイッタラーX
+        <tr>
+          <td>8
+          <td>siman
+        <tr>
+          <td>9
+          <td>believeitmyway
+        <tr>
+          <td>10
+          <td>muupan
+        <tr>
+          <td>11
+          <td>y_kawano
+        <tr>
+          <td>12
+          <td>shin1m
+        <tr>
+          <td>13
+          <td>kazunetakahashi
+        <tr>
+          <td>14
+          <td>ArcticPanda
+        <tr>
+          <td>39
+          <td>ksk
+        <tr>
+          <td>48
+          <td>Megatron
+      </table>
+
+      
+      <h3>About the Preliminary Round</h3>
       <p>The preliminary round will be held on the <a href='http://arena.ai-comp.net/' target='_blank'>online execution server</a> after the submission deadline.
       Only an "active" AI will be used for each team.
       Each team has one active AI, which you can see at the bottom of the "Submit an AI" tab in the online execution server.</p>
