--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -35,8 +35,19 @@
       <h2>予選</h2>
       
       <h3>結果</h3>
-      以下の16チームが決勝へ進出します。
-      予選の対戦結果は<a href="http://arena.ai-comp.net/contests/11">オンライン対戦サーバー</a>をご覧ください。
+      <p>
+        予選には120チームを超えるエントリーがあり、そのうちで81チームからAIプログラムの提出がありました。
+        下記「予選について」記載の方式で予選を実施した結果、以下の16チームの決勝進出を決定しました。
+        具体的には全チームの地域バランスの考慮の結果、後述のレーティング上位の14チームを選抜し、残り2チームは海外からの参加チームのうちで成績優秀なチームを選抜しました。
+        予選の対戦結果は<a href="http://arena.ai-comp.net/contests/11" target="_blank">オンライン対戦サーバー</a>をご覧ください。
+      </p>
+
+      <p>
+        決勝進出チームの皆さん、おめでとうございます！ 京都で会いましょう。
+        惜しかった皆さん、決勝をぜひ一緒に観戦しましょう。また懇親会に先着順で招待します。
+        懇親会招待については後日、事務局から連絡します。
+      </p>
+
       <table border='1' cellspacing='0' cellpadding='3' align='center' width='80%'>
         <tr>
           <th>予選順位
