Temporarily remove a description about the number of teams

--- a/preliminary.html
+++ b/preliminary.html
@@ -34,7 +34,7 @@
       <h2>Preliminary Round</h2>
       
       <h3>Result</h3>
-      <p>Among over 120 teams registered to the preliminary round, 81 teams submitted their own AI program to the preliminary round. By conducting the preliminary round according to the way described in About the Preliminary Round in below, the following 16 teams have been selected for advancing to the World final. By considering actual regional balance, 14 teams with the highest ratings among all teams and 2 international teams with good results have been selected. The game results are on <a href="http://arena.ai-comp.net/contests/11" target="_blank">the online execution server</a>.</p>
+      <p>By conducting the preliminary round according to the way described in About the Preliminary Round in below, the following 16 teams have been selected for advancing to the World final. By considering actual regional balance, 14 teams with the highest ratings among all teams and 2 international teams with good results have been selected. The game results are on <a href="http://arena.ai-comp.net/contests/11" target="_blank">the online execution server</a>.</p>
 
       <p>Congratulations to all winners! See you in beautiful Kyoto! Other teams that lost are invited to Banquet on the World final round date on a first-come, first-served basis; so come to Kyoto and watch the World final together! Later we will let you know in detail.</p>
       
