Add info about the final round

--- a/final-jp.html
+++ b/final-jp.html
@@ -35,6 +35,10 @@
       <h2>決勝</h2>
       <p>決勝は情報処理学会 第77回全国大会に併設される予定です。</p>
 
+　　　　　　<h3>決勝プログラム提出方法</h3>
+      <p><a href='http://arena.ai-comp.net/contests/5' target='_blank'>オンライン対戦サーバー</a>にてプログラムを提出してください。
+      各チームがサーバに投稿したAIプログラムのうち、ActiveなAIプログラムのみが決勝に使用されます。
+      ActiveなAIプログラムは常に1つのみで、Submit an AIタブの最下部で確認できます。</p>
 
       <h3>第1～第4試合</h3>
 
