--- a/final.html
+++ b/final.html
@@ -34,6 +34,10 @@
       <h2>Final Round</h2>
       <p>The World final round will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto (TBD).</p>
 
+　　　　　　<h3>How to Submit Your Program</h3>
+      <p>Please submit your program on <a href='http://arena.ai-comp.net/contests/5' target='_blank'>the online execution server</a>.
+      Only an "active" AI will be used for each team.
+      Each team has one active AI, which you can see at the bottom of the "Submit an AI" tab in the online execution server.</p>
 
       <h3>First Match to Fourth Macth</h3>
 
