--- a/index-jp.html
+++ b/index-jp.html
@@ -49,6 +49,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+	<li>2月9日: <a href="schedule-jp.html">決勝プログラムの提出締切</a>を公表しました。プログラム投稿方法は<a href="final-jp.html">決勝</a>をご参照ください。
         <li>1月14日: <a href="preliminary-jp.html">予選結果</a>を公開しました。
       	<li>12月29日: 28日中にオンライン対戦サーバにおいてプログラム投稿にあたり不具合がありましたが、現在は復旧しています。
         <li>12月26日: オンライン予選後、決勝進出者は決勝に向けてプログラムを改訂できます。その旨を明記しました。
