--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+	<li>Feb  9: <a href="schedule.html">Submission deadline for the world final</a> has been announced. Please read <a href="final.html">"Final"</a> and submit your program.
         <li>Jan 14: <a href="preliminary.html">The result of preliminary round</a> has been released.
       	<li>Dec 29: There was a problem with submission on the online execution server on Dec 28. Now the problem has been fixed. 
         <li>Dec 26: Teams advanced to the World final round can revise their AI program for the World final round after the preliminary round. 
