--- a/final-jp.html
+++ b/final-jp.html
@@ -33,7 +33,18 @@
 
     <section id="importantdates">
       <h2>決勝</h2>
-      <p>決勝は情報処理学会 第77回全国大会に併設される予定です。</p>
+<p>決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>に併設されます。
+
+<ul>
+<li>場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>（京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）
+<li>日時: 3月18日（水） 15:20-18:35（決勝18:00-）
+<p>
+15:20-15:50 委員長挨拶、イベントスポンサー挨拶、コンテストゲーム紹介<br>
+15:50-17:50 トーナメント観戦、選手自己紹介<br>
+18:00-18:25 決勝観戦、講評<br>
+18:25-18:35 表彰式<br>
+18:45-20:15 懇親会（カンフォーラにて招待制）
+</p>
 
 　　　　　　<h3>決勝プログラム提出方法</h3>
       <p><a href='http://arena.ai-comp.net/contests/5' target='_blank'>オンライン対戦サーバー</a>にてプログラムを提出してください。
