--- a/final-jp.html
+++ b/final-jp.html
@@ -34,12 +34,11 @@
     <section id="importantdates">
       <h2>決勝</h2>
 <p>決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>に併設されます。
+</p>
 
-<ul>
-<li>場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>（京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）
-<li>日時: 3月18日（水） 15:20-18:35（決勝18:00-）
-</ul>
 <p>
+場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>（京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）<<br>
+日時: 3月18日（水） 15:20-18:35（決勝18:00-）<br>
 15:20-15:50 委員長挨拶、イベントスポンサー挨拶、コンテストゲーム紹介<br>
 15:50-17:50 トーナメント観戦、選手自己紹介<br>
 18:00-18:25 決勝観戦、講評<br>
