--- a/final-jp.html
+++ b/final-jp.html
@@ -33,17 +33,24 @@
 
     <section id="importantdates">
       <h2>決勝</h2>
-<p>決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>に併設されます。
+<p>「旗幟を鮮明にしない中立の領主たちを交渉で味方に引き入れて、勝利を手にしろ！」
+世界で活躍できる人材発掘と育成を目的として、戦国大名を題材としたAI対戦型のゲームプログラミングコンテスト
+SamurAI Codingの決勝を開催します。
+情報処理学会の主催としては3回目となり、12月実施のオンライン予選には世界中から過去最多の130を超えるプログラム提出がありました。
+当日は、予選を勝ち抜いた16チームによる白熱した対戦を、チーム紹介や実況およびアルゴリズム・戦略解説を交えて鑑賞します。
+決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>に併設されます。
+どなたでもご参加いただけます。ぜひご一緒に白熱の対戦を鑑賞しましょう！
 </p>
 
 <p>
-場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>（京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）<<br>
+場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>
+（京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）<br>
 日時: 3月18日（水） 15:20-18:35（決勝18:00-）<br>
-15:20-15:50 委員長挨拶、イベントスポンサー挨拶、コンテストゲーム紹介<br>
-15:50-17:50 トーナメント観戦、選手自己紹介<br>
-18:00-18:25 決勝観戦、講評<br>
-18:25-18:35 表彰式<br>
-18:45-20:15 懇親会（カンフォーラにて招待制）
+　15:20-15:50 委員長挨拶、イベントスポンサー挨拶、コンテストゲーム紹介<br>
+　15:50-17:50 トーナメント観戦、選手自己紹介<br>
+　18:00-18:25 決勝観戦、講評<br>
+　18:25-18:35 表彰式<br>
+　18:45-20:15 懇親会（カンフォーラにて招待制）
 </p>
 
 　　　　　　<h3>決勝プログラム提出方法</h3>
