--- a/final.html
+++ b/final.html
@@ -32,7 +32,36 @@
 
    <section id="importantdates">
       <h2>Final Round</h2>
-      <p>The World final round will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto (TBD).</p>
+      <p>The World final round will be held on March 18 2015 collocated (TBD).</p>
+      
+<h4>"Negotiate and Conquer!"</h4>
+
+<p>
+The world final of SamurAI Coding 2014-15, the 3rd International AI programming Contest held by IPSJ, 
+will take place on March 18 collocated with <a href="http://www.ipsj.or.jp/event/taikai/77/">77th IPSJ National Convention</a> at Kyoto University. 
+Among over 130 submissions, 16 teams have been selected for the world final round.
+Contestants demonstrate and compete on their design and engineering skills of algorithms 
+and AI strategies in addition to programming skills by creating AI program for a match-up game.
+Contestant players act as "daimyo" (powerful feudal lords in pre-modern Japan) 
+to compete with one another by drawing neutral liege lords to their side. 
+</p> 
+ 
+<p>
+Everyone is welcome to the world final. Come to Kyoto and watch the world final together!
+</p>
+
+<p>
+Place: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">77th IPSJ National Convention, International Conference Halls II and III, 
+2F Clock Tower Centennial Hall, Kyoto University</a><br>
+Schedule (subject to change): <br>
+　14:50-15:20 Registration<br>
+　15:20-15:50 Opening<br>
+　15:50-17:50 First Match to Fourth Match with team introductions<br>
+　17:50-18:00 Break<br>
+　18:00-18:25 Final Match<br>
+　18:25-18:35 Award Ceremony<br>
+　18:45-20:15 Banquet (buffet‐style dinner party, casual)
+</p>
 
 　　　　　　<h3>How to Submit Your Program</h3>
       <p>Please submit your program on <a href='http://arena.ai-comp.net/contests/5' target='_blank'>the online execution server</a>.
