--- a/final.html
+++ b/final.html
@@ -50,8 +50,10 @@ Everyone is welcome to the world final. Come to Kyoto and watch the world final 
 </p>
 
 <p>
-Place: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">77th IPSJ National Convention, International Conference Halls II and III, 
+Place: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">International Conference Halls II and III, 
 2F Clock Tower Centennial Hall, Kyoto University</a><br>
+Moderator: Hironori Washizaki (Waseda University)<br>
+Commentator: Kazunori Sakamoto (National Institute of Informatics) and Committee Members<br>
 Schedule (subject to change): <br>
 　14:50-15:20 Registration<br>
 　15:20-15:50 Opening<br>
