--- a/final.html
+++ b/final.html
@@ -54,6 +54,7 @@ Place: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">International
 2F Clock Tower Centennial Hall, Kyoto University</a><br>
 Moderator: Hironori Washizaki (Waseda University)<br>
 Commentator: Kazunori Sakamoto (National Institute of Informatics) and Committee Members<br>
+Date: March 18 Wed 15:20-18:35<br>
 Schedule (subject to change): <br>
 　14:50-15:20 Registration<br>
 　15:20-15:50 Opening<br>
