--- a/index-jp.html
+++ b/index-jp.html
@@ -49,7 +49,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-        <li>2月12日: 京都大学にて全国大会併設の<a href="final-jp.html">決勝 World Final</a>の進行を掲載しました。ぜひご一緒に、白熱の試合を観戦しましょう！
+        <li>2月12日: 情報処理学会全国大会併設の<a href="final-jp.html">決勝 World Final</a>の進行を掲載しました。ぜひご一緒に、白熱の試合を観戦しましょう！
 	<li>2月9日: <a href="schedule-jp.html">決勝プログラムの提出締切</a>を公表しました。プログラム投稿方法は<a href="final-jp.html">決勝</a>をご参照ください。
         <li>1月14日: <a href="preliminary-jp.html">予選結果</a>を公開しました。
       	<li>12月29日: 28日中にオンライン対戦サーバにおいてプログラム投稿にあたり不具合がありましたが、現在は復旧しています。
