--- a/final-jp.html
+++ b/final-jp.html
@@ -46,6 +46,8 @@ SamurAI Codingの決勝を開催します。
 <p>
 場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>
 （京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）<br>
+参加: どなたでもご参加いただけます。直接会場へお越しください。全国大会の他セッションも聴講されたい場合は、
+<a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">全国大会サイト</a>から申し込みください。
 司会: 鷲崎弘宜（早稲田大学グローバルソフトウェアエンジニアリング研究所 所長）<br>
 解説: 坂本一憲（国立情報学研究所 アーキテクチャ科学研究系 助教）ほか実行委員会一同<br>
 日時: 3月18日（水） 15:20-18:35（決勝18:00-）<br>
