--- a/final-jp.html
+++ b/final-jp.html
@@ -44,6 +44,14 @@ SamurAI Codingの決勝を開催します。
 </p>
 
 <p>
+<strong>
+いよいよ本日 15:20から ‪#‎SamurAICoding‬ 2014-15 World Finalの対戦が始まります
+。京都大学の会場には来られないという方、ニコニコ生放送<a href="http://ch.nicovideo.jp/ipsj/">【第2イベント会場：情報処理学会チャンネル】</a>
+にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
+</strong>
+</p>
+
+<p>
 場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>
 （京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）<br>
 参加: 申込不要（全国大会の他セッションも聴講されたい場合は<a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">参加申し込み</a>ください）<br>
