--- a/index-jp.html
+++ b/index-jp.html
@@ -49,6 +49,9 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+        <li>3月18日: <strong>いよいよ本日 15:20からWorld Finalの対戦が始まります。ニコニコ生放送<a href="http://ch.nicovideo.jp/ipsj/">【第2イベント会場：情報処理学会チャンネル】</a>
+にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
+</strong>
         <li>2月12日: 情報処理学会全国大会併設の<a href="final-jp.html">決勝 World Final</a>の進行を掲載しました。ぜひご一緒に、白熱の試合を観戦しましょう！
 	<li>2月9日: <a href="schedule-jp.html">決勝プログラムの提出締切</a>を公表しました。プログラム投稿方法は<a href="final-jp.html">決勝</a>をご参照ください。
         <li>1月14日: <a href="preliminary-jp.html">予選結果</a>を公開しました。
