--- a/final-jp.html
+++ b/final-jp.html
@@ -45,8 +45,8 @@ SamurAI Codingの決勝を開催します。
 
 <p>
 <strong>
-いよいよ本日 15:20から ‪#‎SamurAICoding‬ 2014-15 World Finalの対戦が始まります
-。京都大学の会場には来られないという方、ニコニコ生放送<a href="http://ch.nicovideo.jp/ipsj/">【第2イベント会場：情報処理学会チャンネル】</a>
+いよいよ本日15:20からWorld Finalの対戦が始まります。
+京都大学の会場には来られないという方、ニコニコ生放送<a href="http://ch.nicovideo.jp/ipsj/">【第2イベント会場：情報処理学会チャンネル】</a>
 にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
 </strong>
 </p>
