--- a/final.html
+++ b/final.html
@@ -50,6 +50,12 @@ Everyone is welcome to the world final. Come to Kyoto and watch the world final 
 </p>
 
 <p>
+Today the world final of #SamurAICoding 2014-15 will take place at Kyoto University. 
+If you do not come to the contest site, you can still enjoy the contest 
+by watching <a href="http://ch.nicovideo.jp/ipsj/">NicoNicoVideo Broadcasting</a>. Watch the world final together!
+</p>
+
+<p>
 Place: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">International Conference Halls II and III, 
 2F Clock Tower Centennial Hall, Kyoto University</a><br>
 Moderator: Hironori Washizaki (Waseda University)<br>
