--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+        <li>Mar 18: If you do not come to the contest site, you can still enjoy the contest by watching <a href="http://ch.nicovideo.jp/ipsj/">NicoNicoVideo Broadcasting</a>. Watch the world final together!</li>
         <li>Feb 12: <a href="final.html">Timetable of the world final</a> collocated with 77th IPSJ National Convention at Kyoto University has been announced. Come to Kyoto, and watch exiting game together!
 	<li>Feb  9: <a href="schedule.html">Submission deadline for the world final</a> has been announced. Please read <a href="final.html">"Final"</a> and submit your program.
         <li>Jan 14: <a href="preliminary.html">The result of preliminary round</a> has been released.
