--- a/final.html
+++ b/final.html
@@ -32,6 +32,78 @@
 
    <section id="importantdates">
       <h2>Final Round</h2>
+      
+<h4>Result</h4>
+
+Thanks to many contestants, sponsors, supporters and staffs, 
+SamurAI Coding 2014-15 World Final Round was successfully over! 
+By conducting four matches, four teams (among 16) advanced to the Final match: 
+Taiyo, wahu, siman, and muupan. And finally the winner was team Taiyo. Congratulations! 
+Moreover we had a great networking at the banquet! Thank you again, and, see you next time!
+
+      <table border>
+        <thead>
+        <tr>
+          <th>Place</th>
+          <th>1st place</th>
+          <th>2nd place</th>
+          <th>3rd place</th>
+          <th>4th place</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1st and 2nd are tied</td>
+          <td>11 points</td>
+          <td>11 points</td>
+          <td>2 points</td>
+          <td>0 point</td>
+        </tr>
+        <tr>
+          <td>1st, 2nd, and 3rd are tied</td>
+          <td>8 points</td>
+          <td>8 points</td>
+          <td>8 points</td>
+          <td>0 point</td>
+        </tr>
+        <tr>
+          <td>1st, 2nd, 3rd, and 4th are tied</td>
+          <td>6 points</td>
+          <td>6 points</td>
+          <td>6 points</td>
+          <td>6 points</td>
+        </tr>
+        <tr>
+          <td>2nd and 3rd are tied</td>
+          <td>18 points</td>
+          <td>3 points</td>
+          <td>3 points</td>
+          <td>0 point</td>
+        </tr>
+        <tr>
+          <td>2nd, 3rd, and 4th are tied</td>
+          <td>18 points</td>
+          <td>2 points</td>
+          <td>2 points</td>
+          <td>2 points</td>
+        </tr>
+        <tr>
+          <td>3rd and 4th are tied</td>
+          <td>18 points</td>
+          <td>4 points</td>
+          <td>1 point</td>
+          <td>1 point</td>
+        </tr>
+        <tr>
+          <td>1st and 2nd, are tied, and 3rd and 4th are tied</td>
+          <td>11 points</td>
+          <td>11 points</td>
+          <td>1 point</td>
+          <td>1 point</td>
+        </tr>
+        </tbody>
+      </table>
+
 
 <h4>"Negotiate and Conquer!"</h4>
 
