--- a/final.html
+++ b/final.html
@@ -41,69 +41,193 @@ By conducting four matches, four teams (among 16) advanced to the Final match:
 Taiyo, wahu, siman, and muupan. And finally the winner was team Taiyo. Congratulations! 
 Moreover we had a great networking at the banquet! Thank you again, and, see you next time!
 
-      <table border>
-        <thead>
-        <tr>
-          <th>Place</th>
-          <th>1st place</th>
-          <th>2nd place</th>
-          <th>3rd place</th>
-          <th>4th place</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <td>1st and 2nd are tied</td>
-          <td>11 points</td>
-          <td>11 points</td>
-          <td>2 points</td>
-          <td>0 point</td>
-        </tr>
-        <tr>
-          <td>1st, 2nd, and 3rd are tied</td>
-          <td>8 points</td>
-          <td>8 points</td>
-          <td>8 points</td>
-          <td>0 point</td>
-        </tr>
-        <tr>
-          <td>1st, 2nd, 3rd, and 4th are tied</td>
-          <td>6 points</td>
-          <td>6 points</td>
-          <td>6 points</td>
-          <td>6 points</td>
-        </tr>
-        <tr>
-          <td>2nd and 3rd are tied</td>
-          <td>18 points</td>
-          <td>3 points</td>
-          <td>3 points</td>
-          <td>0 point</td>
-        </tr>
-        <tr>
-          <td>2nd, 3rd, and 4th are tied</td>
-          <td>18 points</td>
-          <td>2 points</td>
-          <td>2 points</td>
-          <td>2 points</td>
-        </tr>
-        <tr>
-          <td>3rd and 4th are tied</td>
-          <td>18 points</td>
-          <td>4 points</td>
-          <td>1 point</td>
-          <td>1 point</td>
-        </tr>
-        <tr>
-          <td>1st and 2nd, are tied, and 3rd and 4th are tied</td>
-          <td>11 points</td>
-          <td>11 points</td>
-          <td>1 point</td>
-          <td>1 point</td>
-        </tr>
-        </tbody>
-      </table>
-
+<table>
+	<thead>
+		<tr>
+			<th>
+				Place
+			</th>
+			<th>
+				Team
+			</th>
+			<th>
+				Final Game 1
+			</th>
+			<th>
+				Game 2
+			</th>
+			<th>
+				Game 3
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th>
+				1
+			</th>
+			<td>
+				Taiyo ( Taiyo Hara )
+			</td>
+			<td>
+				18
+			</td>
+			<td>
+				18
+			</td>
+			<td>
+				18
+			</td>
+		</tr>
+		<tr>
+			<th>
+				2
+			</th>
+			<td>
+				wahu
+			</td>
+			<td>
+				1
+			</td>
+			<td>
+				4
+			</td>
+			<td>
+				4
+			</td>
+		</tr>
+		<tr>
+			<th>
+				3
+			</th>
+			<td>
+				siman
+			</td>
+			<td>
+				4
+			</td>
+			<td>
+				0
+			</td>
+			<td>
+				1
+			</td>
+		</tr>
+		<tr>
+			<th>
+				4
+			</th>
+			<td>
+				muupan
+			</td>
+			<td>
+				1
+			</td>
+			<td>
+				2
+			</td>
+			<td>
+				1
+			</td>
+		</tr>
+		<tr>
+			<th>
+				5
+			</th>
+			<td colspan="4">
+				iwashi31
+			</td>
+		</tr>
+		<tr>
+			<th>
+				6
+			</th>
+			<td colspan="4">
+				kazunetakahashi
+			</td>
+		</tr>
+		<tr>
+			<th>
+				7
+			</th>
+			<td colspan="4">
+				haraduka
+			</td>
+		</tr>
+		<tr>
+			<th>
+				8
+			</th>
+			<td colspan="4">
+				y_kawano
+			</td>
+		</tr>
+		<tr>
+			<th>
+				9
+			</th>
+			<td colspan="4">
+				宇宙ツイッタラーX
+			</td>
+		</tr>
+		<tr>
+			<th>
+				10
+			</th>
+			<td colspan="4">
+				believeitmyway
+			</td>
+		</tr>
+		<tr>
+			<th>
+				11
+			</th>
+			<td colspan="4">
+				tosaka2 (Kazuhiro Saito)
+			</td>
+		</tr>
+		<tr>
+			<th>
+				12
+			</th>
+			<td colspan="4">
+				Megatron (Varun Vishwanathan)
+			</td>
+		</tr>
+		<tr>
+			<th>
+				13
+			</th>
+			<td colspan="4">
+				assy
+			</td>
+		</tr>
+		<tr>
+			<th>
+				14
+			</th>
+			<td colspan="4">
+				shin1m
+			</td>
+		</tr>
+		<tr>
+			<th>
+				15
+			</th>
+			<td colspan="4">
+				ArcticPanda (Katsuma Inoue)
+			</td>
+		</tr>
+		<tr>
+			<th>
+				16
+			</th>
+			<td colspan="4">
+				ksk
+			</td>
+		</tr>
+	</tbody>
+</table>
 
 <h4>"Negotiate and Conquer!"</h4>
 
