--- a/final.html
+++ b/final.html
@@ -50,16 +50,16 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 				Place
 			</th>
 			<th>
-				Team
+				Team　　　　　　　　　　　
 			</th>
 			<th>
 				Final Game 1
 			</th>
 			<th>
-				Game 2
+				Final Game 2
 			</th>
 			<th>
-				Game 3
+				Final Game 3
 			</th>
 		</tr>
 	</thead>
