--- a/final.html
+++ b/final.html
@@ -232,13 +232,15 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 </table>
 
 <p>
-<img src="https://cloud.githubusercontent.com/assets/4087817/7099480/d3af99a2-e02e-11e4-88b3-48672627e60b.jpg" width="50">
-<img src="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg
-" width="50">
-<img src="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg
-" width="50">
-<img src="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg
-" width="50">
+<a href="https://cloud.githubusercontent.com/assets/4087817/7099480/d3af99a2-e02e-11e4-88b3-48672627e60b.jpg">
+<img src="https://cloud.githubusercontent.com/assets/4087817/7099480/d3af99a2-e02e-11e4-88b3-48672627e60b.jpg" height="200">
+</a>
+<a href="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg
+" height="200"></a>
+<a href="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg
+" height="200"></a>
+<a href="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg
+" height="200"></a>
 </p>
 
 <h4>"Negotiate and Conquer!"</h4>
