--- a/final.html
+++ b/final.html
@@ -237,8 +237,8 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 </a>
 <a href="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg
 " height="200"></a>
-<a href="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg
-" height="200"></a>
+<!--<a href="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg
+" height="200"></a>-->
 <a href="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg
 " height="200"></a>
 </p>
