--- a/final-jp.html
+++ b/final-jp.html
@@ -33,6 +33,229 @@
 
     <section id="importantdates">
       <h2>決勝</h2>
+<h4>結果</h4>
+
+<p>
+多くの選手、スポンサー、参加者ならびにスタッフ・関係者により、 
+SamurAI Coding 2014-15 World Final Roundは無事終了しました。
+4回の対戦の結果、16チーム中次の4チームが最終の決勝に進出しました: Taiyo, wahu, siman, and muupan。
+さらに決勝戦の結果、チームTaiyoが優勝しました。
+また、賞金およびスポンサー賞は下記のチームに授与されました。
+おめでとうございます！ 
+さらに懇親会にてネットワーキングを実施しました。
+ありがとうございました、そして、また次の機会にお会いしましょう！
+</p>
+
+<ul>
+<li>賞金: Taiyo ( Taiyo Hara ) 40,000JPY, wahu 30,000JPY, siman 20,000JPY, muupan 10,000JPY
+<li>リクルートホールディングス, Indeed スポンサー賞 (Amazon gift cards & Indeed goods): Taiyo ( Taiyo Hara )
+, wahu, siman
+<li>いい生活 スポンサー賞(Ricoh Theta & Raspberry Pi 2 Model B): iwashi31, tosaka2 (Kazuhiro Saito)
+</ul>
+
+<table>
+	<thead>
+		<tr>
+			<th>
+				Place
+			</th>
+			<th>
+			　　　　　　　　　　　　　　	Team　　　　　　　　　　　
+			</th>
+			<th>
+				Final Game 1
+			</th>
+			<th>
+				Final Game 2
+			</th>
+			<th>
+				Final Game 3
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th>
+				1
+			</th>
+			<td>
+				Taiyo ( Taiyo Hara )
+			</td>
+			<td>
+				18
+			</td>
+			<td>
+				18
+			</td>
+			<td>
+				18
+			</td>
+		</tr>
+		<tr>
+			<th>
+				2
+			</th>
+			<td>
+				wahu
+			</td>
+			<td>
+				1
+			</td>
+			<td>
+				4
+			</td>
+			<td>
+				4
+			</td>
+		</tr>
+		<tr>
+			<th>
+				3
+			</th>
+			<td>
+				siman
+			</td>
+			<td>
+				4
+			</td>
+			<td>
+				0
+			</td>
+			<td>
+				1
+			</td>
+		</tr>
+		<tr>
+			<th>
+				4
+			</th>
+			<td>
+				muupan
+			</td>
+			<td>
+				1
+			</td>
+			<td>
+				2
+			</td>
+			<td>
+				1
+			</td>
+		</tr>
+		<tr>
+			<th>
+				5
+			</th>
+			<td colspan="4">
+				iwashi31
+			</td>
+		</tr>
+		<tr>
+			<th>
+				6
+			</th>
+			<td colspan="4">
+				kazunetakahashi
+			</td>
+		</tr>
+		<tr>
+			<th>
+				7
+			</th>
+			<td colspan="4">
+				haraduka
+			</td>
+		</tr>
+		<tr>
+			<th>
+				8
+			</th>
+			<td colspan="4">
+				y_kawano
+			</td>
+		</tr>
+		<tr>
+			<th>
+				9
+			</th>
+			<td colspan="4">
+				宇宙ツイッタラーX
+			</td>
+		</tr>
+		<tr>
+			<th>
+				10
+			</th>
+			<td colspan="4">
+				believeitmyway
+			</td>
+		</tr>
+		<tr>
+			<th>
+				11
+			</th>
+			<td colspan="4">
+				tosaka2 (Kazuhiro Saito)
+			</td>
+		</tr>
+		<tr>
+			<th>
+				12
+			</th>
+			<td colspan="4">
+				Megatron (Varun Vishwanathan)
+			</td>
+		</tr>
+		<tr>
+			<th>
+				13
+			</th>
+			<td colspan="4">
+				assy
+			</td>
+		</tr>
+		<tr>
+			<th>
+				14
+			</th>
+			<td colspan="4">
+				shin1m
+			</td>
+		</tr>
+		<tr>
+			<th>
+				15
+			</th>
+			<td colspan="4">
+				ArcticPanda (Katsuma Inoue)
+			</td>
+		</tr>
+		<tr>
+			<th>
+				16
+			</th>
+			<td colspan="4">
+				ksk
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<p>
+</p>
+
+<p>
+<a href="https://cloud.githubusercontent.com/assets/4087817/7099480/d3af99a2-e02e-11e4-88b3-48672627e60b.jpg">
+<img src="https://cloud.githubusercontent.com/assets/4087817/7099480/d3af99a2-e02e-11e4-88b3-48672627e60b.jpg" height="200">
+</a>
+<a href="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg
+" height="200"></a>
+<!--<a href="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg
+" height="200"></a>-->
+<a href="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg
+" height="200"></a>
+</p>
+
 <h4>「旗幟を鮮明にしない中立の領主たちを交渉で味方に引き入れて、勝利を手にしろ！」</h4>
 <p>
 世界で活躍できる人材発掘と育成を目的として、戦国大名を題材としたAI対戦型のゲームプログラミングコンテスト
