--- a/final.html
+++ b/final.html
@@ -39,9 +39,18 @@
 Thanks to many contestants, sponsors, supporters and staffs, 
 SamurAI Coding 2014-15 World Final Round was successfully over! 
 By conducting four matches, four teams (among 16) advanced to the Final match: 
-Taiyo, wahu, siman, and muupan. And finally the winner was team Taiyo. Congratulations! 
+Taiyo, wahu, siman, and muupan. And finally the winner was team Taiyo!
+And the following teams received prizes. 
+Congratulations! 
 Moreover we had a great networking at the banquet! Thank you again, and, see you next time!
 </p>
+
+<ul>
+<li>Cash Prize: Taiyo ( Taiyo Hara ) 40,000JPY, wahu 30,000JPY, siman 20,000JPY, muupan 10,000JPY
+<li>Recruit Holdings, Indeed Prize (Amazon gift cards & Indeed goods): Taiyo ( Taiyo Hara )
+, wahu, siman
+<li>e-Seikatsu Prize (Ricoh Theta & Raspberry Pi 2 Model B): iwashi31, tosaka2 (Kazuhiro Saito)
+</ul>
 
 <table>
 	<thead>
