Add links to the replay of the finals and AI program of the finalists

--- a/final-jp.html
+++ b/final-jp.html
@@ -60,7 +60,7 @@ SamurAI Coding 2014-15 World Final Roundは無事終了しました。
 				Place
 			</th>
 			<th>
-			　　　　　　　　　　　　　　	Team　　　　　　　　　　　
+				Team　　　　　　　　　　　
 			</th>
 			<th>
 				Final Game 1
@@ -70,6 +70,9 @@ SamurAI Coding 2014-15 World Final Roundは無事終了しました。
 			</th>
 			<th>
 				Final Game 3
+			</th>
+			<th>
+				AIプログラム
 			</th>
 		</tr>
 	</thead>
@@ -82,13 +85,16 @@ SamurAI Coding 2014-15 World Final Roundは無事終了しました。
 				Taiyo ( Taiyo Hara )
 			</td>
 			<td>
-				18
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">18</a>
 			</td>
 			<td>
-				18
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">18</a>
 			</td>
 			<td>
-				18
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">18</a>
+			</td>
+			<td>
+				<a href="programs/Maou20150412.zip">こちら</a>
 			</td>
 		</tr>
 		<tr>
@@ -99,13 +105,16 @@ SamurAI Coding 2014-15 World Final Roundは無事終了しました。
 				wahu
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">1</a>
 			</td>
 			<td>
-				4
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">4</a>
 			</td>
 			<td>
-				4
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">4</a>
+			</td>
+			<td>
+				<a href="programs/JavaScript_w2.zip">こちら</a>
 			</td>
 		</tr>
 		<tr>
@@ -116,13 +125,13 @@ SamurAI Coding 2014-15 World Final Roundは無事終了しました。
 				siman
 			</td>
 			<td>
-				4
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">4</a>
 			</td>
 			<td>
-				0
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">0</a>
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">1</a>
 			</td>
 		</tr>
 		<tr>
@@ -133,13 +142,13 @@ SamurAI Coding 2014-15 World Final Roundは無事終了しました。
 				muupan
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">1</a>
 			</td>
 			<td>
-				2
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">2</a>
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">1</a>
 			</td>
 		</tr>
 		<tr>
