--- a/final.html
+++ b/final.html
@@ -59,7 +59,7 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 				Place
 			</th>
 			<th>
-			　　　　　　　　　　　　　　	Team　　　　　　　　　　　
+				Team　　　　　　　　　　　
 			</th>
 			<th>
 				Final Game 1
@@ -69,6 +69,9 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 			</th>
 			<th>
 				Final Game 3
+			</th>
+			<th>
+				AI Program
 			</th>
 		</tr>
 	</thead>
@@ -81,13 +84,16 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 				Taiyo ( Taiyo Hara )
 			</td>
 			<td>
-				18
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">18</a>
 			</td>
 			<td>
-				18
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">18</a>
 			</td>
 			<td>
-				18
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">18</a>
+			</td>
+			<td>
+				<a href="programs/Maou20150412.zip">Here</a>
 			</td>
 		</tr>
 		<tr>
@@ -98,13 +104,16 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 				wahu
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">1</a>
 			</td>
 			<td>
-				4
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">4</a>
 			</td>
 			<td>
-				4
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">4</a>
+			</td>
+			<td>
+				<a href="programs/JavaScript_w2.zip">Here</a>
 			</td>
 		</tr>
 		<tr>
@@ -115,13 +124,13 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 				siman
 			</td>
 			<td>
-				4
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">4</a>
 			</td>
 			<td>
-				0
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">0</a>
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">1</a>
 			</td>
 		</tr>
 		<tr>
@@ -132,13 +141,13 @@ Moreover we had a great networking at the banquet! Thank you again, and, see you
 				muupan
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">1</a>
 			</td>
 			<td>
-				2
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">2</a>
 			</td>
 			<td>
-				1
+				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">1</a>
 			</td>
 		</tr>
 		<tr>
