--- a/index-jp.html
+++ b/index-jp.html
@@ -49,6 +49,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+      <li>4月28日: <a href="final-jp.html">決勝戦のリプレイ、および決勝戦に進出した各チームからいただいたAIプログラム</a>を公開しました。
       <li>4月11日: 決勝（The world final round）は無事終了しました! 結果は<a href="http://samuraicoding.info/final-jp.html">決勝ページ</a>を参照ください。また次の機会にお会いしましょう！
         <li>3月18日: <strong>いよいよ本日 15:20からWorld Finalの対戦が始まります。ニコニコ生放送<a href="http://ch.nicovideo.jp/ipsj/">【第2イベント会場：情報処理学会チャンネル】</a>
 にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
