--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
-      <li>Apr 28: <a href="final.jp.html">The replays of the finals and the AI programs of the finalists</a> have been published.
+      <li>Apr 28: <a href="final.html">The replays of the finals and the AI programs of the finalists</a> have been published.
       <li>Apr 11: The world final round was successfully over! See the result at the <a href="http://samuraicoding.info/final.html">Final page</a>. See you next time!
         <li>Mar 18: If you do not come to the contest site, you can still enjoy the contest by watching <a href="http://ch.nicovideo.jp/ipsj/">NicoNicoVideo Broadcasting</a>. Watch the world final together!</li>
         <li>Feb 12: <a href="final.html">Timetable of the world final</a> collocated with 77th IPSJ National Convention at Kyoto University has been announced. Come to Kyoto, and watch exiting game together!
